--- a/src/_locales/ka/messages.json
+++ b/src/_locales/ka/messages.json
@@ -536,7 +536,7 @@
     "description": "used as a tooltip for error icon beside a list"
   },
   "1pTrustWarning": {
-    "message": "ფილტრების არიდება არასანდო წყაროებიდან.",
+    "message": "ნუ დაამატებთ ფილტრებს არასანდო წყაროებიდან.",
     "description": "Warning against copy-pasting filters from random sources"
   },
   "1pEnableMyFiltersLabel": {
