--- a/src/_locales/el/messages.json
+++ b/src/_locales/el/messages.json
@@ -40,7 +40,7 @@
     "description": "appears as tab name in dashboard"
   },
   "whitelistPageName": {
-    "message": "Αξιόπιστοι ιστότοποι",
+    "message": "Αξιόπιστες τοποθεσίες",
     "description": "appears as tab name in dashboard"
   },
   "shortcutsPageName": {
@@ -468,7 +468,7 @@
     "description": "English: Apply changes"
   },
   "3pGroupDefault": {
-    "message": "Τοπικά",
+    "message": "Ενσωματωμένο",
     "description": "Filter lists section name"
   },
   "3pGroupAds": {
@@ -632,11 +632,11 @@
     "description": "A concise description of the 'Trusted sites' pane."
   },
   "whitelistImport": {
-    "message": "Εισαγωγή και προσάρτηση",
+    "message": "Εισαγωγή και προσθήκη…",
     "description": "Button in the 'Trusted sites' pane"
   },
   "whitelistExport": {
-    "message": "Εξαγωγή",
+    "message": "Εξαγωγή…",
     "description": "Button in the 'Trusted sites' pane"
   },
   "whitelistExportFilename": {
@@ -780,7 +780,7 @@
     "description": "Label to identify the URL of an entry"
   },
   "loggerURLFilteringHeader": {
-    "message": "Κανόνας URL",
+    "message": "Κανόνας διεύθυνσης URL",
     "description": "Small header to identify the dynamic URL filtering section"
   },
   "loggerURLFilteringContextLabel": {
@@ -900,11 +900,11 @@
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportReportSpecificButton": {
-    "message": "Δημιουργία νέας αναφοράς",
+    "message": "Δημιουργία νέας αναφοράς στο Github",
     "description": "Text for button which open an external webpage in Support pane"
   },
   "supportFindSpecificButton": {
-    "message": "Βρείτε παρόμοιες αναφορές",
+    "message": "Εύρεση παρόμοιων αναφορών στο GitHub",
     "description": "A clickable link in the filter issue reporter section"
   },
   "supportS1H": {
@@ -940,7 +940,7 @@
     "description": "Third paragraph of 'Filter issues' section in Support pane"
   },
   "supportS4H": {
-    "message": "Αναφορά σφαλμάτων",
+    "message": "Αναφορά σφάλματος",
     "description": "Header of 'Bug report' section in Support pane"
   },
   "supportS4P1": {
@@ -980,7 +980,7 @@
     "description": "Label for the URL of the page"
   },
   "supportS6Select1": {
-    "message": "Η ιστοσελίδα...",
+    "message": "Η ιστοσελίδα…",
     "description": "Label for widget to select type of issue"
   },
   "supportS6Select1Option0": {
@@ -1032,7 +1032,7 @@
     "description": "Link to privacy policy on GitHub (English)"
   },
   "aboutChangelog": {
-    "message": "Αρχείο καταγραφής αλλαγών",
+    "message": "Αρχείο αλλαγών",
     "description": ""
   },
   "aboutCode": {
