Import translation work from https://crowdin.com/project/ublock

--- a/platform/mv3/extension/_locales/cy/messages.json
+++ b/platform/mv3/extension/_locales/cy/messages.json
@@ -20,7 +20,7 @@
     "description": "appears as tab name in dashboard"
   },
   "developPageName": {
-    "message": "Develop",
+    "message": "Datblygu",
     "description": "appears as tab name in dashboard. Inspired from 'Develop' menu in Safari, see https://developer.apple.com/documentation/safari-developer-tools/develop-menu"
   },
   "aboutPageName": {
@@ -124,15 +124,15 @@
     "description": "A paragraph in the filter issue reporter section"
   },
   "supportFindSpecificButton": {
-    "message": "Find similar reports on GitHub",
+    "message": "Dod o hyd i adroddiadau tebyg ar GitHub",
     "description": "A clickable link in the filter issue reporter section"
   },
   "supportS6URL": {
-    "message": "Address of the webpage:",
+    "message": "Cyfeiriad y dudalen we:",
     "description": "Label for the URL of the page"
   },
   "supportS6Select1": {
-    "message": "The webpage…",
+    "message": "Y dudalen we…",
     "description": "Label for widget to select type of issue"
   },
   "supportS6Select1Option0": {
@@ -272,27 +272,27 @@
     "description": "Label to be used for the parameter-less URL"
   },
   "strictblockBack": {
-    "message": "Go back",
+    "message": "Yn ôl",
     "description": "A button to go back to the previous webpage"
   },
   "strictblockClose": {
-    "message": "Close this window",
+    "message": "Cau'r ffenestr hon",
     "description": "A button to close the current tab"
   },
   "strictblockDontWarn": {
-    "message": "Don't warn me again about this site",
+    "message": "Peidio â'm rhybuddio eto am y wefan hon",
     "description": "Label for checkbox in document-blocked page"
   },
   "strictblockProceed": {
-    "message": "Proceed",
+    "message": "Parhau",
     "description": "A button to navigate to the blocked page"
   },
   "zapperTipEnter": {
-    "message": "Enter element zapper mode",
+    "message": "Galluogi'r modd saethu elfen",
     "description": "Tooltip for the button used to enter zapper mode"
   },
   "zapperTipQuit": {
-    "message": "Exit element zapper mode",
+    "message": "Gadael y modd saethu elfen",
     "description": "Tooltip for the button used to exit zapper mode"
   },
   "developDropdownLabel": {
@@ -320,7 +320,7 @@
     "description": "An option in a dropdown list"
   },
   "saveButton": {
-    "message": "Save",
+    "message": "Cadw",
     "description": "Text for buttons used to save changes"
   },
   "revertButton": {
