--- a/src/_locales/ro/messages.json
+++ b/src/_locales/ro/messages.json
@@ -624,7 +624,7 @@
     "description": "English: a sort option for list of rules."
   },
   "rulesSortByDestination": {
-    "message": "Destinaţia",
+    "message": "Destinație",
     "description": "English: a sort option for list of rules."
   },
   "whitelistPrompt": {
